--- a/notebooks/combined results.ipynb
+++ b/notebooks/combined results.ipynb
@@ -39,6 +39,93 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "all_df = ava_style_ap_df.append(flickr_ap_df).append(wikipaintings_ap_df)\n",
+      "column_order = all_df.columns[(-all_df.mean()).argsort().values]\n",
+      "all_df = all_df.reindex_axis(column_order, axis=1)\n",
+      "print all_df.to_latex(float_format=lambda x: '%.3f'%x if not np.isnan(x) else '-')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\\begin{tabular}{lrrrrrrrrrrrrr}\n",
+        "\\toprule\n",
+        "{} &  Murray-CVPR-2012 &  Late-fusion x Content &  MC-bit &  DeCAF\\_6 &  Fine-tuned DeCAF\\_6 &  DeCAF\\_5 &  ImageNet scores &  L*a*b* Histogram &  Imagenet &  GIST &  ImageNet &  Graph-based Saliency &  random \\\\\n",
+        "\\midrule\n",
+        "Complementary\\_Colors         &             0.440 &                  0.469 &   0.329 &    0.548 &               0.514 &    0.368 &            0.389 &             0.294 &         - & 0.223 &         - &                 0.111 &   0.130 \\\\\n",
+        "Duotones                     &             0.510 &                  0.676 &   0.612 &    0.737 &               0.665 &    0.363 &            0.383 &             0.582 &         - & 0.255 &         - &                 0.233 &   0.259 \\\\\n",
+        "HDR                          &             0.640 &                  0.669 &   0.624 &    0.594 &               0.516 &    0.494 &            0.335 &             0.194 &         - & 0.124 &         - &                 0.101 &   0.091 \\\\\n",
+        "Image\\_Grain                  &             0.740 &                  0.647 &   0.744 &    0.545 &               0.563 &    0.535 &            0.219 &             0.213 &         - & 0.104 &         - &                 0.104 &   0.099 \\\\\n",
+        "Light\\_On\\_White               &             0.730 &                  0.908 &   0.802 &    0.915 &               0.860 &    0.805 &            0.508 &             0.867 &         - & 0.704 &         - &                 0.172 &   0.113 \\\\\n",
+        "Long\\_Exposure                &             0.430 &                  0.453 &   0.420 &    0.431 &               0.444 &    0.208 &            0.242 &             0.232 &         - & 0.159 &         - &                 0.147 &   0.127 \\\\\n",
+        "Macro                        &             0.500 &                  0.478 &   0.413 &    0.427 &               0.488 &    0.376 &            0.438 &             0.230 &         - & 0.269 &         - &                 0.161 &   0.154 \\\\\n",
+        "Motion\\_Blur                  &             0.400 &                  0.478 &   0.458 &    0.467 &               0.380 &    0.327 &            0.186 &             0.117 &         - & 0.114 &         - &                 0.122 &   0.093 \\\\\n",
+        "Negative\\_Image               &             0.690 &                  0.595 &   0.499 &    0.619 &               0.561 &    0.427 &            0.323 &             0.268 &         - & 0.189 &         - &                 0.123 &   0.104 \\\\\n",
+        "Rule\\_of\\_Thirds               &             0.300 &                  0.352 &   0.236 &    0.353 &               0.290 &    0.269 &            0.244 &             0.188 &         - & 0.167 &         - &                 0.228 &   0.171 \\\\\n",
+        "Shallow\\_DOF                  &             0.480 &                  0.624 &   0.637 &    0.659 &               0.627 &    0.522 &            0.517 &             0.332 &         - & 0.276 &         - &                 0.223 &   0.208 \\\\\n",
+        "Silhouettes                  &             0.720 &                  0.791 &   0.801 &    0.801 &               0.835 &    0.609 &            0.401 &             0.261 &         - & 0.263 &         - &                 0.130 &   0.117 \\\\\n",
+        "Soft\\_Focus                   &             0.390 &                  0.312 &   0.290 &    0.354 &               0.305 &    0.225 &            0.170 &             0.127 &         - & 0.126 &         - &                 0.114 &   0.102 \\\\\n",
+        "Vanishing\\_Point              &             0.570 &                  0.684 &   0.685 &    0.658 &               0.646 &    0.527 &            0.542 &             0.123 &         - & 0.107 &         - &                 0.161 &   0.092 \\\\\n",
+        "\\_mean                        &             0.539 &                  0.581 &   0.539 &    0.579 &               0.550 &    0.432 &            0.350 &             0.288 &         - & 0.220 &         - &                 0.152 &   0.133 \\\\\n",
+        "Bright,\\_Energetic            &                 - &                  0.355 &   0.250 &    0.331 &               0.340 &    0.313 &                - &                 - &     0.231 &     - &         - &                     - &   0.069 \\\\\n",
+        "Depth\\_of\\_Field               &                 - &                  0.266 &   0.230 &    0.241 &               0.252 &    0.208 &                - &                 - &     0.202 &     - &         - &                     - &   0.066 \\\\\n",
+        "Ethereal                     &                 - &                  0.418 &   0.328 &    0.365 &               0.383 &    0.356 &                - &                 - &     0.190 &     - &         - &                     - &   0.065 \\\\\n",
+        "Geometric\\_Composition        &                 - &                  0.442 &   0.399 &    0.395 &               0.409 &    0.369 &                - &                 - &     0.347 &     - &         - &                     - &   0.066 \\\\\n",
+        "HDR                          &                 - &                  0.548 &   0.527 &    0.477 &               0.488 &    0.332 &                - &                 - &     0.293 &     - &         - &                     - &   0.070 \\\\\n",
+        "Hazy                         &                 - &                  0.565 &   0.489 &    0.506 &               0.504 &    0.386 &                - &                 - &     0.330 &     - &         - &                     - &   0.073 \\\\\n",
+        "Horror                       &                 - &                  0.479 &   0.304 &    0.464 &               0.471 &    0.337 &                - &                 - &     0.286 &     - &         - &                     - &   0.065 \\\\\n",
+        "Long\\_Exposure                &                 - &                  0.469 &   0.426 &    0.388 &               0.415 &    0.300 &                - &                 - &     0.254 &     - &         - &                     - &   0.067 \\\\\n",
+        "Macro                        &                 - &                  0.684 &   0.620 &    0.683 &               0.667 &    0.588 &                - &                 - &     0.640 &     - &         - &                     - &   0.065 \\\\\n",
+        "Melancholy                   &                 - &                  0.178 &   0.169 &    0.157 &               0.166 &    0.096 &                - &                 - &     0.131 &     - &         - &                     - &   0.068 \\\\\n",
+        "Minimal                      &                 - &                  0.498 &   0.452 &    0.465 &               0.476 &    0.319 &                - &                 - &     0.281 &     - &         - &                     - &   0.064 \\\\\n",
+        "Noir                         &                 - &                  0.529 &   0.409 &    0.521 &               0.527 &    0.372 &                - &                 - &     0.290 &     - &         - &                     - &   0.064 \\\\\n",
+        "Romantic                     &                 - &                  0.200 &   0.162 &    0.206 &               0.210 &    0.140 &                - &                 - &     0.185 &     - &         - &                     - &   0.068 \\\\\n",
+        "Serene                       &                 - &                  0.209 &   0.219 &    0.191 &               0.197 &    0.142 &                - &                 - &     0.175 &     - &         - &                     - &   0.067 \\\\\n",
+        "Soft,\\_Pastel                 &                 - &                  0.309 &   0.267 &    0.317 &               0.304 &    0.269 &                - &                 - &     0.272 &     - &         - &                     - &   0.071 \\\\\n",
+        "Sunny                        &                 - &                  0.550 &   0.523 &    0.540 &               0.551 &    0.481 &                - &                 - &     0.388 &     - &         - &                     - &   0.064 \\\\\n",
+        "Vintage                      &                 - &                  0.421 &   0.348 &    0.385 &               0.382 &    0.309 &                - &                 - &     0.268 &     - &         - &                     - &   0.066 \\\\\n",
+        "\\_mean                        &                 - &                  0.419 &   0.360 &    0.390 &               0.397 &    0.313 &                - &                 - &     0.280 &     - &         - &                     - &   0.067 \\\\\n",
+        "Abstract\\_Art                 &                 - &                  0.341 &   0.314 &    0.258 &               0.233 &        - &                - &                 - &         - &     - &     0.192 &                     - &   0.045 \\\\\n",
+        "Abstract\\_Expressionism       &                 - &                  0.351 &   0.340 &    0.243 &               0.222 &        - &                - &                 - &         - &     - &     0.159 &                     - &   0.042 \\\\\n",
+        "Art\\_Informel                 &                 - &                  0.221 &   0.217 &    0.187 &               0.158 &        - &                - &                 - &         - &     - &     0.138 &                     - &   0.045 \\\\\n",
+        "Art\\_Nouveau\\_(Modern)         &                 - &                  0.421 &   0.402 &    0.197 &               0.219 &        - &                - &                 - &         - &     - &     0.096 &                     - &   0.044 \\\\\n",
+        "Baroque                      &                 - &                  0.436 &   0.386 &    0.313 &               0.330 &        - &                - &                 - &         - &     - &     0.162 &                     - &   0.043 \\\\\n",
+        "Color\\_Field\\_Painting         &                 - &                  0.773 &   0.739 &    0.689 &               0.703 &        - &                - &                 - &         - &     - &     0.503 &                     - &   0.047 \\\\\n",
+        "Cubism                       &                 - &                  0.495 &   0.488 &    0.400 &               0.427 &        - &                - &                 - &         - &     - &     0.193 &                     - &   0.041 \\\\\n",
+        "Early\\_Renaissance            &                 - &                  0.578 &   0.559 &    0.453 &               0.424 &        - &                - &                 - &         - &     - &     0.192 &                     - &   0.044 \\\\\n",
+        "Expressionism                &                 - &                  0.235 &   0.230 &    0.186 &               0.186 &        - &                - &                 - &         - &     - &     0.093 &                     - &   0.042 \\\\\n",
+        "High\\_Renaissance             &                 - &                  0.401 &   0.345 &    0.288 &               0.281 &        - &                - &                 - &         - &     - &     0.165 &                     - &   0.042 \\\\\n",
+        "Impressionism                &                 - &                  0.586 &   0.528 &    0.411 &               0.433 &        - &                - &                 - &         - &     - &     0.227 &                     - &   0.042 \\\\\n",
+        "Magic\\_Realism                &                 - &                  0.521 &   0.465 &    0.428 &               0.435 &        - &                - &                 - &         - &     - &     0.198 &                     - &   0.040 \\\\\n",
+        "Mannerism\\_(Late\\_Renaissance) &                 - &                  0.505 &   0.439 &    0.356 &               0.359 &        - &                - &                 - &         - &     - &     0.171 &                     - &   0.041 \\\\\n",
+        "Minimalism                   &                 - &                  0.660 &   0.614 &    0.604 &               0.636 &        - &                - &                 - &         - &     - &     0.449 &                     - &   0.041 \\\\\n",
+        "Nave\\_Art\\_(Primitivism)       &                 - &                  0.395 &   0.425 &    0.225 &               0.210 &        - &                - &                 - &         - &     - &     0.111 &                     - &   0.048 \\\\\n",
+        "Neoclassicism                &                 - &                  0.601 &   0.537 &    0.399 &               0.438 &        - &                - &                 - &         - &     - &     0.179 &                     - &   0.043 \\\\\n",
+        "Northern\\_Renaissance         &                 - &                  0.560 &   0.478 &    0.433 &               0.339 &        - &                - &                 - &         - &     - &     0.119 &                     - &   0.043 \\\\\n",
+        "Pop\\_Art                      &                 - &                  0.441 &   0.398 &    0.281 &               0.304 &        - &                - &                 - &         - &     - &     0.163 &                     - &   0.041 \\\\\n",
+        "Post-Impressionism           &                 - &                  0.348 &   0.348 &    0.292 &               0.317 &        - &                - &                 - &         - &     - &     0.135 &                     - &   0.043 \\\\\n",
+        "Realism                      &                 - &                  0.408 &   0.309 &    0.266 &               0.265 &        - &                - &                 - &         - &     - &     0.159 &                     - &   0.042 \\\\\n",
+        "Rococo                       &                 - &                  0.616 &   0.548 &    0.467 &               0.501 &        - &                - &                 - &         - &     - &     0.242 &                     - &   0.042 \\\\\n",
+        "Romanticism                  &                 - &                  0.392 &   0.389 &    0.343 &               0.265 &        - &                - &                 - &         - &     - &     0.185 &                     - &   0.051 \\\\\n",
+        "Surrealism                   &                 - &                  0.262 &   0.247 &    0.134 &               0.152 &        - &                - &                 - &         - &     - &     0.099 &                     - &   0.045 \\\\\n",
+        "Symbolism                    &                 - &                  0.390 &   0.390 &    0.260 &               0.296 &        - &                - &                 - &         - &     - &     0.172 &                     - &   0.044 \\\\\n",
+        "Ukiyo-e                      &                 - &                  0.895 &   0.894 &    0.788 &               0.765 &        - &                - &                 - &         - &     - &     0.260 &                     - &   0.042 \\\\\n",
+        "\\_mean                        &                 - &                  0.473 &   0.441 &    0.356 &               0.356 &        - &                - &                 - &         - &     - &     0.191 &                     - &   0.043 \\\\\n",
+        "\\bottomrule\n",
+        "\\end{tabular}\n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "mean_df = pd.DataFrame({\n",
       "        'AVA Style': ava_style_ap_df.ix['_mean'],\n",
       "        'AVA Rating (accuracy)': ava_style_aesthetics_acc_df.iloc[0],\n",
